try --add-module to compile